@@ -12,30 +12,30 @@
 #include "XEditorWindow.h"
 #include <sstream>
 #include <string.h>
+#include <utf8.h>
 
 #define NEWLINE L"\r\n"
+#define TABSTR L"   "
 
 namespace XEditor {
 
 std::vector<std::wstring> split_lines(const std::wstring &text);
 std::wstring PasteFromClipboard(Window &wnd);
 void CopyToClipboard(Window &wnd, const std::wstring &text);
-std::wstring StrTrimRight(const std::wstring& str);
+std::wstring StrTrimRight(const std::wstring& str); /// Removes any space characters from the right side of a string
+std::wstring StrClean(const std::wstring& str); /// Cleans string from any control characters except \t
 bool Inbetween(int a, int b, int x);
 
 XEditorWindow::XEditorWindow() :
-	Window(L"", WS_CHILD | WS_VISIBLE, 0, 0, 0, 0, 0, 0, 0){
+	Window(L"", WS_CHILD | WS_VISIBLE | WS_VSCROLL/* | WS_HSCROLL*/, 0, 0, 0, 0, 0, 0, 0){
 }
 
 XEditorWindow::XEditorWindow(int x, int y, int width, int height,
 		Window& parentWnd) :
-	Window(L"", WS_CHILD | WS_VISIBLE, x, y, width, height, parentWnd, 0, 0) {
-//	textFont_ = Drawing::Drawer::getLogFont((HFONT)GetStockObject(SYSTEM_FIXED_FONT));
+	Window(L"", WS_CHILD | WS_VISIBLE | WS_VSCROLL/* | WS_HSCROLL*/, x, y, width, height, parentWnd, 0, 0) {
 	selectDefFont();
 	lines_.push_back(L"");
-	RECT t {0, 0, 0, 0};
-	calcLineRect(L"A", t); // since we are here, we really suppose to call XEditorWindow::calcLineRect - NOT it's derivatives
-	stdCharHeight_ = t.bottom;
+	updateScrollInfo();
 }
 
 XEditorWindow::~XEditorWindow() {
@@ -59,10 +59,32 @@ LRESULT XEditorWindow::WndProc(UINT msg, WPARAM wParam, LPARAM lParam) {
 	case WM_KEYDOWN:
 		WMKeyDown((char) wParam);
 		break;
-	case WM_MOUSEMOVE:
+	case WM_MBUTTONDOWN:
+	case WM_RBUTTONDOWN:
 	case WM_LBUTTONDOWN:
+		SetFocus(*this);
+	case WM_MBUTTONUP:
+	case WM_RBUTTONUP:
 	case WM_LBUTTONUP:
-		mouseMsg(msg);
+	case WM_MOUSEMOVE:
+	case WM_MOUSELEAVE:
+	case WM_MOUSEWHEEL:
+	case WM_MOUSEHWHEEL:
+		mouseMsg(msg, wParam);
+		break;
+	case WM_SETCURSOR:
+		{
+			POINT pt;
+			GetCursorPos(&pt);
+			MapWindowPoints(0, *this, &pt, 1);
+			if(pt.x < getSizeX() && pt.y < getSizeY())
+				textCursor_.setCurrent();
+			else
+				arrowCursor_.setCurrent();
+			return 1;
+		}
+	case WM_VSCROLL:
+		scrollMsg(msg, wParam);
 		break;
 	}
 	return Window::WndProc(msg, wParam, lParam);
@@ -83,11 +105,6 @@ void XEditorWindow::PaintWindow(Drawing::Drawer& drawer) {
 	int top = - screenStartY_;
 	bool bVisibleSectionReached = false;
 	for(int i = 0; i < getLines().size() && top < getSizeY(); ++i) {
-		if(getLine(i).empty()) {
-			top += stdCharHeight_;
-			continue;
-		}
-
 		RECT txtRect {0, 0, 0, 0};
 		SetWindowOrgEx(drawer.getDC(), org.x - screenStartX_, org.y - top, 0);
 		if(!bVisibleSectionReached) {
@@ -108,7 +125,8 @@ void XEditorWindow::PaintWindow(Drawing::Drawer& drawer) {
 //		HRGN newClipRgn = CreateRectRgnIndirect(&txtRect);
 //		SelectClipRgn(drawer.getDC(), newClipRgn);
 //		DeleteObject(newClipRgn);
-
+		if(txtRect.bottom - txtRect.top < stdCharHeight_)
+			txtRect.bottom = txtRect.top + stdCharHeight_;
 		top += txtRect.bottom - txtRect.top;
 	}
 	SetWindowOrgEx(drawer.getDC(), org.x, org.y, 0);
@@ -136,6 +154,7 @@ void XEditorWindow::calcLineRect(const std::wstring &line, RECT &txtRect) {
 }
 
 void XEditorWindow::WMSize(POINTS size) {
+	updateScrollInfo();
 }
 
 void XEditorWindow::WMKillFocus() {
@@ -167,18 +186,22 @@ std::wstring XEditorWindow::getSelection() const {
 }
 
 void XEditorWindow::removeSelection() {
+	if(!hasSelection())
+		return;
+
 	int selectionStartLine = getSelectionStart().first,
 		selectionStartChar = getSelectionStart().second,
 		selectionEndLine = getSelectionEnd().first,
 		selectionEndChar = getSelectionEnd().second;
 
+	clearSelection();
 	setCurrentPosition(selectionStartLine, selectionStartChar);
 
 	setLine(selectionStartLine, getLine(selectionStartLine).substr(0, selectionStartChar) +
 			getLine(selectionEndLine).substr(selectionEndChar));
 
-	if(getSelectionStart().first != getSelectionEnd().first) {
-		getLines().erase(getLineIt(selectionStartLine + 1), getLineIt(selectionEndLine));
+	if(selectionStartLine != selectionEndLine) {
+		getLines().erase(getLineIt(selectionStartLine + 1), getLineIt(selectionEndLine+1));
 		invalidateLines(selectionStartLine, getLines().size());
 	} else
 		invalidateLine(selectionStartLine);
@@ -226,10 +249,9 @@ void XEditorWindow::PostPaintWindow(RECT& updateRect) {
 }
 
 void XEditorWindow::repositionCaret() {
-    RECT txtRect {0, 0, 0, 0};
+    RECT txtRect {-screenStartX_, 0, 0, 0};
     calcLineRect(getCurrentLine().substr(0, currentChar_), txtRect);
-    ::SetCaretPos(txtRect.right, getCurrentLinePosition() * stdCharHeight_);
-
+    ::SetCaretPos(txtRect.right, getCurrentLinePosition() * stdCharHeight_ - screenStartY_);
 }
 
 void XEditorWindow::invalidateCurrentLine() {
@@ -284,9 +306,9 @@ void XEditorWindow::charInput(wchar_t ch) {
 		break;
 
 	default:    // displayable character
+		removeSelection();
 		getLineIt(getCurrentLinePosition())->insert(getLineIt(getCurrentLinePosition())->begin() + getCurrentCharPosition(), ch);
 		moveToNextChar();
-		repositionCaret();
 		invalidateCurrentLine();
 		break;
 	}
@@ -346,6 +368,13 @@ void XEditorWindow::setCurrentCharPosition(int position) {
 		currentChar_ = getCurrentLine().size();
 	else
 		currentChar_ = position;
+	if(currentLine_ * stdCharHeight_ < screenStartY_) {
+		screenStartY_ = currentLine_ * stdCharHeight_;
+		scrollScreen();
+	} else if ((currentLine_+1) * stdCharHeight_ > screenStartY_ + getSizeY()) {
+		screenStartY_ = (currentLine_+1) * stdCharHeight_ - getSizeY();
+		scrollScreen();
+	}
 	repositionCaret();
 }
 
@@ -355,7 +384,7 @@ void XEditorWindow::setCurrentPosition(int line, int position) {
 }
 
 std::wstring& XEditorWindow::insertLine(int at, const std::wstring &line) {
-	auto res = getLines().insert(getLineIt(at), line);
+	auto res = int_insertLine(at, line);
 
 	if(currentLine_ > at)
 		++currentLine_;
@@ -376,7 +405,9 @@ XEditorWindow::insertText(int line, int position,
 	t += lines.front();
 	setLine(line, t);
 
-	getLines().insert(getLineIt(line+1), lines.begin() + 1, lines.end());
+	for(int i = line+1, j = 1; j < lines.size(); ++i, ++j)
+		int_insertLine(i, lines[j]);
+//	getLines().insert(getLineIt(line+1), lines.begin() + 1, lines.end());
 	*getLineIt(line + lines.size() - 1) += rem;
 
 	if(currentLine_ > line)
@@ -420,9 +451,9 @@ void XEditorWindow::WMKeyDown(char keyCode) {
 	case VK_UP:
 	case VK_RIGHT:
 	case VK_DOWN:
-		if(shiftDown && !selecting_)
+		if(shiftDown && !hasSelection())
 			startSelection();
-		else if(!shiftDown && selecting_)
+		else if(!shiftDown && hasSelection())
 			clearSelection();
 		break;
 	default:
@@ -458,6 +489,11 @@ void XEditorWindow::WMKeyDown(char keyCode) {
 		else
 			removeSelection();
 		break;
+	case VK_TAB:
+		getLineIt(getCurrentLinePosition())->insert(getCurrentCharPosition(), TABSTR);
+		setCurrentCharPosition(getCurrentCharPosition() + 3);
+		invalidateCurrentLine();
+		break;
 	default:
 		break;
 	}
@@ -468,10 +504,19 @@ void XEditorWindow::WMKeyUp(char keyCode) {
 
 std::ostream& operator <<(std::ostream& stream,
 		XEditor::XEditorWindow& xeditor) {
+	for(auto line : xeditor.getLines())
+		stream << utf8Str(StrTrimRight(line)) << std::endl;
+	return stream;
 }
 
 std::istream& operator >>(std::istream& stream,
 		XEditor::XEditorWindow& xeditor) {
+	std::string line;
+	while(!stream.eof()) {
+		std::getline(stream, line);
+		xeditor.insertLine(xeditor.getLines().size(), StrClean(wideStr(line)));
+	}
+	return stream;
 }
 
 int XEditorWindow::getCurrentCharPosition() const {
@@ -506,8 +551,9 @@ void XEditorWindow::outputLine(Drawing::Drawer& partDrawer,
 		const std::wstring& line, RECT &txtRect, bool bSimulate, int selStart, int selEnd) {
 
 	partDrawer.drawText(line, DT_CALCRECT, txtRect);
+	partDrawer.setTextColor(GetSysColor(COLOR_WINDOWTEXT));
 
-	if(selStart != -1) {
+	if(!bSimulate && selStart != -1) {
 		RECT leftRect {0, 0, 0, 0}, fillRect {0, 0, 0, 0}, rightRect {0, 0, 0, 0};
 		partDrawer.drawText(line.substr(0, selStart), DT_CALCRECT, leftRect);
 		fillRect.left = leftRect.right;
@@ -522,20 +568,20 @@ void XEditorWindow::outputLine(Drawing::Drawer& partDrawer,
 		if(fillRect.bottom - fillRect.top < stdCharHeight_)
 			fillRect.bottom = fillRect.top + stdCharHeight_;
 
-		HBRUSH br = CreateSolidBrush(RGB(0, 0, 200));
+		HBRUSH br = CreateSolidBrush(GetSysColor(COLOR_HIGHLIGHT));
 		partDrawer.fillRect(fillRect, br);
 		DeleteObject(br);
 
 		if(!bSimulate) {
 			partDrawer.drawText(line.substr(0, selStart), 0, leftRect);
-			partDrawer.setTextColor(RGB(0xFF, 0xFF, 0xFF));
+			partDrawer.setTextColor(GetSysColor(COLOR_HIGHLIGHTTEXT));
 			if(selEnd != -1) {
 				partDrawer.drawText(line.substr(selStart, selEnd - selStart), 0, fillRect);
-				partDrawer.setTextColor(RGB(0, 0, 0));
+				partDrawer.setTextColor(GetSysColor(COLOR_WINDOWTEXT));
 				partDrawer.drawText(line.substr(selEnd), 0, rightRect);
 			} else {
 				partDrawer.drawText(line.substr(selStart), 0, fillRect);
-				partDrawer.setTextColor(RGB(0, 0, 0));
+				partDrawer.setTextColor(GetSysColor(COLOR_WINDOWTEXT));
 			}
 		}
 	} else if(!bSimulate)
@@ -587,6 +633,17 @@ std::wstring StrTrimRight(const std::wstring& str) {
 	return str.substr(0, i+1);
 }
 
+std::wstring StrClean(const std::wstring& str) {
+	std::wstring cleanStr;
+	cleanStr.reserve(str.size());
+	for(int i = 0; i < str.size(); ++i)
+		if(isprint(str[i]))
+			cleanStr += str[i];
+		else if(str[i] == '\t')
+			cleanStr += TABSTR;
+	return cleanStr;
+}
+
 std::vector<std::wstring> split_lines(const std::wstring& text) {
 	std::vector<std::wstring> lines;
 	std::wstringstream ss {text};
@@ -594,7 +651,7 @@ std::vector<std::wstring> split_lines(const std::wstring& text) {
 
 	while(!ss.eof()) {
 		std::getline(ss, tmp);
-		lines.push_back(StrTrimRight(tmp));
+		lines.push_back(StrClean(tmp));
 	}
 	return lines;
 }
@@ -668,15 +725,15 @@ void XEditorWindow::removeLine(int line) {
 
 void XEditorWindow::setSelection(int startLine, int startPosition, int line,
 		int position) {
-	selecting_ = true;
 	selStartLine_ = startLine;
 	selStartChar_ = startPosition;
 	currentLine_ = line;
 	currentChar_ = position;
+	invalidateLines(getSelectionStart().first, getSelectionEnd().first + 1);
 }
 
 void XEditorWindow::startSelection() {
-	selecting_ = true;
+	clearSelection();
 	selStartLine_ = getCurrentLinePosition();
 	selStartChar_ = getCurrentCharPosition();
 }
@@ -717,21 +774,63 @@ void XEditorWindow::selectDefFont() {
 
 void XEditorWindow::selectFont(LOGFONT font) {
 	textFont_ = font;
+	RECT t {0, 0, 0, 0};
+	calcLineRect(L"A", t);
+	stdCharHeight_ = t.bottom;
 	invalidateScreen();
 }
 
-void XEditorWindow::mouseMsg(UINT msg) {
+void XEditorWindow::mouseMsg(UINT msg, WPARAM wParam) {
+	POINT pt;
+	GetCursorPos(&pt);
+	MapWindowPoints(NULL, *this, &pt, 1);
+
 	switch(msg) {
 	case WM_LBUTTONUP:
+		ReleaseCapture();
+		mouseHolding_ = false;
+		if(hasSelection() && getSelectionStart() == getSelectionEnd())
+			clearSelection();
+		break;
 	case WM_LBUTTONDOWN:
+		setCurrentPosition(getPositionAt(pt));
+		if(!(GetKeyState(VK_SHIFT) & 0x80))
+			startSelection();
+		mouseHolding_ = true;
+		SetCapture(*this);
+		break;
 	case WM_MOUSEMOVE:
+		if(mouseHolding_)
+			setCurrentPosition(getPositionAt(pt));
+		TrackMouseEvent(TME_LEAVE);
+		break;
+	case WM_MOUSELEAVE:
+		arrowCursor_.setCurrent();
+		break;
+	case WM_MOUSEWHEEL:
+	case WM_MOUSEHWHEEL:
+		{
+			// Retrieve the lines-to-scroll or characters-to-scroll user setting,
+			// using a default value if the API failed.
+			UINT userSetting;
+			BOOL success = SystemParametersInfo(SPI_GETWHEELSCROLLLINES, 0, &userSetting, 0);
+			if (success == FALSE)
+				userSetting = 1;
+
+			// Set x,y scroll difference,
+			// depending on whether horizontal or vertical scroll.
+			float zDelta = GET_WHEEL_DELTA_WPARAM(wParam);
+			if(msg == WM_MOUSEWHEEL)
+				mouseScroll(0, (zDelta / WHEEL_DELTA) * userSetting);
+			else
+				mouseScroll(- (zDelta / WHEEL_DELTA) * userSetting, 0);
+		}
 		break;
 	}
 }
 
 void XEditorWindow::clearSelection() {
 	invalidateLines(std::min(selStartLine_, currentLine_), std::max(selStartLine_, currentLine_) + 1);
-	selecting_ = false;
 	selStartLine_ = -1;
 	selStartChar_ = -1;
 }
@@ -740,5 +839,113 @@ inline bool Inbetween(int a, int b, int x) {
 	return (a <= x && x < b) || (b <= x && x < a);
 }
 
-} /* namespace XEditor */
+void XEditorWindow::mouseScroll(float scrollX, float scrollY) {
+//	screenStartX_ += scrollX *;
+	screenStartY_ -= scrollY * stdCharHeight_;
+	scrollScreen();
+}
 
+std::pair<int, int> XEditorWindow::getPositionAt(POINT pt) {
+	int top = - screenStartY_;
+	int line, position, diff = 0;
+
+	for(line = 0; line < getLines().size() && top < pt.y; ++line) {
+		RECT lineRect {0, 0, 0, 0};
+		calcLineRect(getLine(line), lineRect);
+		top += lineRect.bottom - lineRect.top;
+	}
+	if(line > 0)
+		--line;
+
+	int left = 0;
+	diff = 0;
+	for(position = 0; position < getLine(line).size() && left - screenStartX_ <= pt.x; ++position) {
+		left += diff/2 + diff%2;
+		RECT lineRect {0, 0, 0, 0};
+		calcLineRect(getLine(line).substr(0, position + 1), lineRect);
+		diff = lineRect.right - lineRect.left - left;
+		left += diff/2;
+	}
+	if(left - screenStartX_ > pt.x)
+		--position;
+
+	return {line, position};
+}
+
+std::wstring XEditorWindow::processNewLine(int at, const std::wstring& line) {
+	return line;
+}
+
+std::vector<std::wstring>::iterator XEditorWindow::int_insertLine(int at, const std::wstring& line) {
+	auto res = getLines().insert(getLineIt(at), processNewLine(at, line));
+	updateScrollInfo();
+	return res;
+}
+
+void XEditorWindow::scrollMsg(UINT msg, WPARAM wParam) {
+    SCROLLINFO scrollInfo = {sizeof(scrollInfo)};
+    scrollInfo.fMask = SIF_ALL;
+
+    int barOrientation = (msg == WM_VSCROLL) ? SB_VERT : SB_HORZ;
+
+    if (!GetScrollInfo(*this, barOrientation, &scrollInfo) )
+        return;
+
+    switch (LOWORD(wParam)) {
+    case SB_TOP:		screenStartY_  = scrollInfo.nMin;		break;
+    case SB_BOTTOM:		screenStartY_  = scrollInfo.nMax;		break;
+    case SB_LINEUP:		screenStartY_ -= stdCharHeight_;		break;
+    case SB_LINEDOWN:	screenStartY_ += stdCharHeight_;		break;
+    case SB_PAGEUP:		screenStartY_ -= scrollInfo.nPage;		break;
+    case SB_PAGEDOWN:	screenStartY_ += scrollInfo.nPage;		break;
+    case SB_THUMBTRACK:	screenStartY_  = scrollInfo.nTrackPos;	break;
+    default:
+         break;
+    }
+
+    scrollScreen();
+
+}
+
+void XEditorWindow::updateScrollInfo() {
+    SCROLLINFO scrollInfo = {sizeof(scrollInfo)};
+    scrollInfo.fMask    = SIF_PAGE|SIF_POS|SIF_RANGE;
+
+    // Set vertical scroll bar.
+    scrollInfo.nPage    = getSizeY();
+    scrollInfo.nPos     = screenStartY_;
+    scrollInfo.nMin     = 0;
+    scrollInfo.nMax     = stdCharHeight_*getLines().size() + scrollInfo.nPage - stdCharHeight_;
+    SetScrollInfo(*this, SB_VERT, &scrollInfo, TRUE);
+
+    // XXX
+//     Set horizontal scroll bar.
+//    scrollInfo.nPage    = getSizeX();
+//    scrollInfo.nPos     = screenStartX_;
+//    scrollInfo.nMin     = 0;
+//    scrollInfo.nMax     = stdCharHeight_*getLines().size();
+//    SetScrollInfo(*this, SB_HORZ, &scrollInfo, TRUE);
+}
+
+void XEditorWindow::scrollScreen() {
+	// XXX duplicate for X
+    SCROLLINFO scrollInfo = {sizeof(scrollInfo)};
+    scrollInfo.fMask = SIF_POS | SIF_RANGE | SIF_PAGE;
+
+    if (!GetScrollInfo(*this, SB_VERT, &scrollInfo) )
+        return;
+
+
+	if (screenStartY_ < 0)
+		screenStartY_ = 0;
+	if (screenStartY_ > scrollInfo.nMax - scrollInfo.nPage)
+		screenStartY_ = scrollInfo.nMax - scrollInfo.nPage;
+	scrollInfo.nPos = screenStartY_;
+	scrollInfo.fMask = SIF_POS;
+	SetScrollInfo(*this, SB_VERT, &scrollInfo, TRUE);
+
+	repositionCaret();
+	invalidateScreen();
+}
+
+} /* namespace XEditor */
